force-app/main/default/objects/cpm__Payment__c/cpm__Payment__c.object-meta.xml
<CustomObject>
    <description>Payments are actual amounts of money transfered to our organisation, either spontaneously or as the result of a Recurring Payment.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAY-{0}</displayFormat>
        <label>Payment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>