force-app/main/default/objects/cpm__Payment__c/fields/cpm__Amount__c.field-meta.xml
<CustomField>
    <fullName>cpm__Amount__c</fullName>
    <description>The amount of the payment.</description>
    <inlineHelpText>El importe de este pago.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>