force-app/main/default/objects/cpm__Payment__c/fields/cpm__Contact__c.field-meta.xml
<CustomField>
    <fullName>cpm__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The debitor.</description>
    <inlineHelpText>El deudor</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>