force-app/main/default/objects/cpm__Payment__c/fields/cpm__Mandate__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mandate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cpm__Payment_Profile__c</field>
            <operation>equals</operation>
            <valueField>cpm__Mandate__c.cpm__Payment_Profile__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cpm__Mandate__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>