force-app/main/default/objects/cpm__Payment__c/fields/cpm__Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Name__c</fullName>
    <description>The name of the debitor. whether it be a organisation or contact.</description>
    <formula>IF (ISBLANK(cpm__Account__c) , cpm__Contact__r.FirstName &amp; &quot; &quot; &amp; cpm__Contact__r.LastName , cpm__Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>El nombre del deudor.</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>