force-app/main/default/objects/cpm__Payment__c/fields/cpm__Originating_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cpm__Originating_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign that let to this payment.</description>
    <inlineHelpText>La campaña que llevó a este pago</inlineHelpText>
    <label>Originating Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>