force-app/main/default/objects/cpm__Payment__c/fields/cpm__Reason_for_Mutation__c.field-meta.xml
<CustomField>
    <fullName>cpm__Reason_for_Mutation__c</fullName>
    <description>If the payment is negative, the reason why should be listed here.</description>
    <inlineHelpText>Por qué este pago es de una cantidad negativa.</inlineHelpText>
    <label>Reason for Mutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reversal</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>