force-app/main/default/objects/cpm__Payment__c/fields/cpm__Reversal_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__Reversal_Reason_Code__c</fullName>
    <description>The bank returnes reason codes when processing a reversal. This reason code is stored here.</description>
    <inlineHelpText>El código de razón bancaria para la devolución</inlineHelpText>
    <label>Reversal Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>