force-app/main/default/objects/cpm__Payment__c/fields/cpm__Transaction__c.field-meta.xml
<CustomField>
    <fullName>cpm__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>cpm__Transaction__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>