force-app/main/default/objects/cpm__Payment__c/fields/msf_Trancode__c.field-meta.xml
<CustomField>
    <fullName>msf_Trancode__c</fullName>
    <label>Trancode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>