force-app/main/default/objects/cpm__Payment__c/fields/proh__File__c.field-meta.xml
<CustomField>
    <fullName>proh__File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File</label>
    <referenceTo>proh__File__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>