force-app/main/default/objects/cpm__Payment__c/validationRules/Valid_trancode.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_trancode</fullName>
    <active>false</active>
    <description>Validation Trancode</description>
    <errorConditionFormula>IF(ISBLANK(msf_Trancode__c), 
FALSE, 
NOT(REGEX(msf_Trancode__c, &quot;\\d{4}&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>msf_Trancode__c</errorDisplayField>
    <errorMessage>Trancode ide cheques nválido, ha de ser 4 números</errorMessage>
</ValidationRule>